# AnrTracer

./: .gitignore  settings.gradle
demo/: .gitignore  build.gradle.kts  proguard-rules.pro
demo/keystore/: devdebug.keystore
demo/src/main/: AndroidManifest.xml
demo/src/main/java/indie/riki/msgtracer/demo/: App.kt
demo/src/main/java/indie/riki/msgtracer/demo/main/: MainActivity.kt
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/main/res/values-night/: themes.xml
demo/src/main/res/values-v23/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
msg-tracer/: .gitignore  CMakeLists.txt  build.gradle.kts
msg-tracer/src/main/cpp/: AnrDumper.cc  AnrDumper.h  AnrWatcher.cc  AnrWatcher.h  SignalHandler.cc  SignalHandler.h  Support.cc  Support.h  managed_jnienv.cc  managed_jnienv.h
msg-tracer/src/main/java/indie/riki/msgtracer/: ActivityThreadHacker.kt  AnrWatcher.kt  LooperMonitor.kt  MessageTracer.kt  Msg.kt
tracer-dashboard/: build.gradle.kts
tracer-dashboard/src/main/: AndroidManifest.xml
tracer-dashboard/src/main/java/indie/riki/msgtracer/dashboard/: HistoricalMsgGraph.kt  MsgGraph.kt  MsgHistoryDecorator.kt  MsgSnapshotActivity.kt  PendingMsgGraph.kt
tracer-dashboard/src/main/res/layout/: mt_float_msg_dashboard.xml  mt_msg_snapshot.xml
tracer-dashboard/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
